# dlm-lector

./: .gitignore  README.md  dlm-leer-corenlp.sh  dlm-leer.sh  dlm.py  notas.txt  noticias.json  requirements.txt  resultados.json  setup.cfg  setup.py
bd/: eventuales.py  kiosco.py  kioscomongo.py  resultados.py
medios/diarios/: ambito.py  casarosada.py  clarin.py  config.yaml  diario.py  diariodeleuco.py  eldestape.py  infobae.py  lanacion.py  noticia.py  paginadoce.py  perfil.py  popular.py  telam.py  tn.py
procesamiento/: frecuencias.py  frecuenciasgcp.py  frecuenciasspacy.py  frecuenciasstanford.py  procesador.py  procesadorspacy.py  tfidf.py
test/: test_ai.py  test_clarin.py  test_eldestape.py  test_eventuales.py  test_frecuencias.py  test_frecuenciasgcp.py  test_frecuenciasstanford.py  test_kiosco.py  test_kioscomongo.py  test_lanacion.py  test_medios.py  test_paginadoce.py  test_popular.py  test_procesador.py  test_resultados.py  test_tn.py  test_tweepy.py  test_txt.py
