[metadata]
name = dlm-lecto
version = 1.0.0
author = dicenlosmedios
author_email = visualizadordecontexto@gmail.com
description = lector de dicenlosmedios
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/migleisas91/dlm-lector
project_urls =
    Bug Tracker = https://github.com/migleisas91/dlm-lector/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .